--- a/package.json
+++ b/package.json
@@ -1,4 +1,24 @@
 {
+  "name": "teamprofilegenerator",
+  "description": "Node.js command-line application that takes in information about employees on a software engineering team and generates an HTML webpage that displays summaries for each person.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coleyrockin/TeamProfileGenerator.git"
+  },
+  "author": "Boyd Roberts",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/coleyrockin/TeamProfileGenerator/issues"
+  },
+  "homepage": "https://github.com/coleyrockin/TeamProfileGenerator#readme",
   "dependencies": {
     "inquirer": "^8.2.4"
   },
